welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:6: error: illegal start of simple expression
  while ()
         ^Diagonal:7: error: ')' expected but '}' found.
}
^