welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
override def run() {
}

def doTheThing() {
  var diag:Int = 0
  var compt:Int = 0
  while ()
}

def doTheDiag(compt:Int):Int = {
  
}

	
